# Biolab

./: .gitignore  CLAUDE.md  README.md  run_viewer_and_replay.sh  udp_receiver_5555.py
configs/: default.yaml  saved_positions.json
docs/: biolab_data_collection_table.md  biolab_data_pipeline.md  interfaces.md  openarm_startup_guide.md  server19_prompt.md  startup_guide.md  teleop_replay_pipeline.md
liquid/: CLAUDE.md  cli.py  config.py  measure.py  server.py
our_modules/control/: __init__.py
our_modules/perception/: __init__.py  camera_client.py
our_modules/planning/: __init__.py
ros2_ws/: init_motors.sh  init_motors1.sh  lock_left_arm_current.py  lock_left_side_current.py  openarm软件清单.md  t_launch.sh
ros2_ws/docs/: joint_trajectory_controller_usage_en.md  joint_trajectory_controller_usage_zh.md  启动说明.md  夹爪排查.md  播放录制.md  末端位置控制.md  调试说明.md
ros2_ws/openarm_sdk/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  TESTING.md  check_dependencies.sh  pyproject.toml  run_example.sh  test_import.py  test_import_debug.py
ros2_ws/openarm_sdk/examples/: __init__.py  basic_control.py  bilateral_control.py  config_example.py  gravity_compensation.py
ros2_ws/openarm_sdk/openarm_sdk/: __init__.py  config.py  config_loader.py  control.py  control_params.py  core.py  dynamics.py  exceptions.py
ros2_ws/openarm_sdk/openarm_sdk/exo/: __init__.py  protocol.py
ros2_ws/openarm_sdk/tests/: __init__.py
ros2_ws/src/chassis_control/: CMakeLists.txt  package.xml
ros2_ws/src/chassis_control/config/: params.yaml
ros2_ws/src/chassis_control/desc/: vinci软件项目指南.md
ros2_ws/src/chassis_control/include/chassis_control/: chassis_control.h  filters.h  steering_motor.h  wheel_motor.h
ros2_ws/src/chassis_control/launch/: svtrobo_bringup.launch.py
ros2_ws/src/chassis_control/scripts/: bms_monitor_gui.py
ros2_ws/src/chassis_control/src/: JK_BMS_Status.cpp  aimotor_RS485_control.cpp  aimotor_position_node.cpp  chassis_control.cpp  filters.cpp  main.cpp  steering_motor.cpp  wheel_motor.cpp  zlac8015d_rpm_node.cpp
ros2_ws/src/f710_teleop/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/f710_teleop/config/: f710_teleop.yaml
ros2_ws/src/f710_teleop/f710_teleop/: my_controller_node.py
ros2_ws/src/f710_teleop/launch/: f710_teleop.launch.py
ros2_ws/src/f710_teleop/resource/: f710_teleop
ros2_ws/src/openarm_arm_teleop/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/openarm_arm_teleop/config/: openarm_arm_teleop.yaml  openarm_ee_teleop.yaml
ros2_ws/src/openarm_arm_teleop/launch/: openarm_arm_teleop.launch.py  openarm_ee_teleop_sim.launch.py
ros2_ws/src/openarm_arm_teleop/openarm_arm_teleop/: arm_teleop_node.py  ee_teleop_node.py
ros2_ws/src/openarm_arm_teleop/resource/: openarm_arm_teleop
ros2_ws/src/openarm_can/: CMakeLists.txt  package.xml
ros2_ws/src/openarm_can/python/: meson.build
ros2_ws/src/openarm_can/python/openarm/can/: __init__.py  core.py
ros2_ws/src/openarm_can/setup/: configure_socketcan.sh  configure_socketcan_4_arms.sh
ros2_ws/src/openarm_can/src/openarm/can/socket/: arm_component.cpp
ros2_ws/src/openarm_ros2/openarm_bringup/launch/: openarm.bimanual.launch.py  openarm_bimanual_aimotor_trigger.launch.py
ros2_ws/src/openarm_ros2/openarm_hardware/include/openarm_hardware/: v10_simple_hardware.hpp
ros2_ws/src/openarm_ros2/openarm_hardware/src/: v10_simple_hardware.cpp
ros2_ws/src/openarm_teleop/: CMakeLists.txt  colcon.pkg
ros2_ws/src/openarm_teleop/config/: aimotor_trigger_move.yaml  follower.yaml  leader.yaml
ros2_ws/src/openarm_teleop/control/: gravity_compasation.cpp  openarm_bilateral_control.cpp  openarm_bimanual_unilateral_control.cpp
ros2_ws/src/openarm_teleop/docs/: bilateral_control_stiffness_analysis.md  control_flow_analysis.md
ros2_ws/src/openarm_teleop/script/: README_trajectory.md  aimotor_trigger_move_bimanual.py  control_gripper.py  launch_bilateral.sh  launch_bimanual_unilateral.sh  launch_grav_comp.sh  launch_unilateral.sh  move_to_pose.py  play_joint_trajectory.py  play_trajectory.sh  record_joint_trajectory.py  record_trajectory.sh
ros2_ws/src/openarm_teleop/src/controller/: control.cpp  control.hpp
ros2_ws/src/qnbot_cmd_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/qnbot_cmd_bridge/config/: aimotor_trigger_move.yaml  exo_cmd_bridge.yaml
ros2_ws/src/qnbot_cmd_bridge/launch/: aimotor_trigger_move.launch.py  exo_cmd_bridge.launch.py
ros2_ws/src/qnbot_cmd_bridge/qnbot_cmd_bridge/: __init__.py  aimotor_trigger_move_node.py  exo_cmd_bridge_node.py
ros2_ws/src/qnbot_teleoperator/: package.xml  setup.cfg  setup.py
ros2_ws/src/qnbot_teleoperator/config/: exoskeleton_display.rviz  qnbot_teleoperator_config.yaml  retargeting_OpenArm.yaml
ros2_ws/src/qnbot_teleoperator/launch/: exo_retargeting.launch.py  exoskeleton_bridge.launch.py  exoskeleton_display.launch.py  openarm_display.launch.py  openarm_hardware_control.launch.py  openarm_teleoperator.launch.py  websocket_teleoperator.launch.py
ros2_ws/src/qnbot_teleoperator/qnbot_teleoperator/: __init__.py  exo_retargeting_node.py  exoskeleton_bridge_node.py  forward_position_to_joint_trajectory_bridge_node.py  openarm_arm_joint_merger.py  openarm_exo_tf_bridge_node.py  openarm_hardware_control_node.py  websocket_teleoperator.py
ros2_ws/src/qnbot_teleoperator/qnbot_teleoperator/protocol/: __init__.py  exo_protocol_parser.py
ros2_ws/src/qnbot_teleoperator/resource/meshs/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link8.STL
ros2_ws/src/qnbot_teleoperator/resource/urdf/: qnbot_exoskeleton.xacro  qnbot_exoskeleton_left.xacro  qnbot_exoskeleton_right.xacro
ros2_ws/src/qnbot_teleoperator/scripts/: qnbot_remote_arm_websocket.py  remote_manipulator_data_reader.py
scripts/: check_motors.sh  clean_hand_cmd.py  deploy.sh  detect_idle_frames.py  pack_conda.sh  preflight_check.py  reset_left_hand.py  save_position.py  set_right_thumb_yaw.py  setup_env.sh  start_hardware.sh  start_lift.sh  stop_hardware.sh  teach_point.py  test_d435i.py
