[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openarm-sdk"
version = "0.2.0"
description = "OpenArm 机械臂控制的高级 Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "OpenArm Team"}
]
keywords = ["robotics", "openarm", "sdk", "control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "numpy>=1.19.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://github.com/enactic/openarm"
Documentation = "https://docs.openarm.dev"
Repository = "https://github.com/enactic/openarm"

[tool.setuptools.packages.find]
where = ["."]
include = ["openarm_sdk*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

