<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openarm_can</name>
  <version>1.1.0</version>
  <description>Low-level CAN communication library for OpenArm hardware.</description>

  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <build_export_depend>ament_cmake</build_export_depend>
  <exec_depend>ament_cmake</exec_depend>

  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <!-- Add other dependencies here if the library links to them (e.g., Eigen3) -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
